tests/miniJava/pos/000647_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( false ) if ( 0 ) { } else { } else if ( 0 ) { } else { } } }
