tests/miniJava/neg/000383_mutation.MiniJava
class java { public static void Main ( String [ extends ] java ) { { } } }
